# mann_kendall_automated

./: .coverage  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  Untitled.ipynb  app.py  context.md  debug.py  dev-requirements.txt  development.md  generate_kendall_stats.py  main.py  manage.py  mann_kendall.py  package-lock.json  package.json  pyproject.toml  qodana.yaml  requirements.txt  setup.py  setup.sh  tabela.xlsx  test_trend_fix.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  funding.yml
.github/workflows/: python-app.yml  python-tests.yml
.streamlit/: config.toml  credentials.toml
.virtual_documents/: Untitled.ipynb.py
Mann_Kendall_Automated/: .travis.yml  generate.py  generate_excel.py  generate_kendall_stats.py
Mann_Kendall_Automated/tests/: context.py  test_fix_string.py  test_generate_mann_kendall.py
Mann_Kendall_Automated/utils/: fix_string.py
backend/: combined_backend_code.txt  combined_code.txt
backend/src/application/use_cases/: perform_mann_kendall_analysis.py
backend/src/domain/entities/: analysis_result.py
backend/src/infrastructure/django/: settings.py  urls.py  views.py
backend/src/infrastructure/django/migrations/: 0002_initial.py
backend/src/infrastructure/repositories/: django_analysis_repository.py  django_project_repository.py
backend/tests/: conftest.py
backend/tests/application/use_cases/: test_perform_mann_kendall_analysis.py
backend/tests/infrastructure/repositories/: test_django_analysis_repository.py
docs/: DEVELOPMENT.md  MIGRATION.md  conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: index.rst  mann_kendall.rst
examples/: basic_usage.py  cli_example.sh
frontend/: combined_frontend_code.txt  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: FileUploader.tsx
frontend/src/components/common/: NavLink.tsx
frontend/src/components/features/home/: QuickActionCard.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/routes/: ProtectedRoute.tsx
frontend/src/components/ui/: alert.tsx  button.tsx  card.tsx  index.ts  input.tsx  label.tsx  table.tsx  tabs.tsx
frontend/src/hooks/: useApi.ts  useAuth.ts
frontend/src/pages/: AnalysisPage.tsx  HomePage.tsx  LoginPage.tsx  ProjectsPage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: index.css
input_tables/: UQSA_STATS.xlsx  example_input_table.xlsx  gsi_example.xlsx
mann_kendall/: __init__.py
mann_kendall/core/: __init__.py  cache.py  constants.py  mann_kendall.py  processor.py  sens_slope.py
mann_kendall/data/: __init__.py  cleaner.py  loader.py
mann_kendall/ui/: __init__.py  app.py  download.py  feedback.py  visualizer.py
mann_kendall/utils/: __init__.py  logging_config.py  progress.py
mann_kendall_automated/: generate.py
mann_kendall_automated/tests/: context.py  test_fix_string.py  test_generate_mann_kendall.py
mann_kendall_automated/utils/: fix_string.py  mann_kendall.py  progress_bar.py
mann_kendall_automated/utils/.ipynb_checkpoints/: mann_kendall-checkpoint.py
mann_kendall_automated/utils/file/: kendall_dist.csv
old/: app.py
old/input_tables/: example_input_table_2.xlsx
old/output_tables/: example_input_table_2020_04_13_1689.xlsx
old/tests/: test_fix_string.py  test_generate_mann_kendall.py  test_mann_kendall.py
old/tests/files/: example_input.xlsx
old/utils/: fix_string.py  progress_bar.py
output_tables/: Mann_Kendall_2020_02_19.xlsx
scripts/: mann_kendall_cli.py
src/: generate.py
src/application/use_cases/: perform_mann_kendall_analysis.py
src/domain/entities/: project.py
src/domain/ports/: analysis_repository.py  project_repository.py
src/infrastructure/django/: admin.py  apps.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
src/infrastructure/django/migrations/: 0001_initial.py  0003_update_analysis_model_parameters.py
src/infrastructure/repositories/: django_analysis_repository.py
src/tests/: context.py  test_fix_string.py  test_generate_mann_kendall.py
src/tests/files/: example_input_with_string.xlsx
src/utils/: fix_string.py  mann_kendall.py  progress_bar.py
tests/: conftest.py  context.py  settings.py
tests/.pytest_cache/v/cache/: lastfailed  nodeids
tests/application/use_cases/: test_perform_mann_kendall_analysis.py
tests/core/: test_mann_kendall.py
tests/data/: test_cleaner.py  test_loader.py
tests/infrastructure/repositories/: test_django_analysis_repository.py
tests/ui/: test_download.py  test_feedback.py  test_streamlit_app.py  test_visualizer.py
tests/utils/: test_progress.py
