[project]
name = "mann-kendall-automated"
version = "0.1.0"
description = "Automated Mann-Kendall trend analysis for environmental engineering and geology"
authors = [{ name = "Gabriel Barbosa Soares", email = "gabriel@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "streamlit>=1.38.0",
    "xlrd>=2.0.1",
    "xlsxwriter>=3.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "openpyxl>=3.1.5",
    "plotly>=5.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.0.272",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.19.0",
    "myst-parser>=0.18.0",
]

[project.scripts]
mann-kendall = "scripts.mann_kendall_cli:main"

[project.urls]
Homepage = "https://github.com/gabrielclimb/mann_kendall_automated"
"Bug Tracker" = "https://github.com/gabrielclimb/mann_kendall_automated/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
# Dev dependencies are defined in [project.optional-dependencies]
# Rye will automatically use them when running 'rye sync'

[tool.rye.scripts]
req = "uv pip compile pyproject.toml -o requirements.txt"
stream = "streamlit run app.py"
test = "pytest tests/ --cov=mann_kendall --cache-clear"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mann_kendall"]

[tool.ruff]
line-length = 130
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 130
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 130

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
